<resources>
    <string name="app_name">HiLo</string>
    <string name="hiLoTitle">HiLo Game</string>
    <string name="intro">How to play: \nYou can guess any number between 1 and 1000 that you so please. But you only get 10 guesses! \n\nGood Luck!</string>
    <string name="guessingBtn">GUESS</string>
    <string name="resetBtn">RESET</string>
    <string name="inputHint" translatable="false">1 - 1000</string>
    <string name="giveUp">Give up? \nPress and hold the RESET button to view answer.</string>
    <string name="duke1">Duke Waving</string>
    <string name="duke2">This is Duke! You\'re competitor</string>

    <string name="action_about">About</string>
    <string name="author" translatable="false">Christine Tamkican \n(tamk0002)</string>

    <string name="pleaseReset">Out of guesses! PLEASE RESET</string>
    <string name="exWin">EXCELLENT WIN! :)\nNumber of guesses: </string>
    <string name="supWin">SUPERIOR WIN! :D\nNumber of guesses: </string>
    <string name="low"> is too low :(</string>
    <string name="high"> is too high :(</string>
    <string name="resetComp">RESET COMPLETE</string>
    <string name="ans">Answer: </string>
    <string name="guessNum">\nGuess# </string>
</resources>
